--- a/wiki/PRTG_Tools_by_Gerard_Feijth.wiki
+++ b/wiki/PRTG_Tools_by_Gerard_Feijth.wiki
@@ -5,31 +5,30 @@ http://gf-ptf.googlecode.com/files/PRTGToolsFamily_65x119.png
 
 = Introduction =
 
-The PRTG Tools family consists out of 6 separate applications: 
+The PRTG Tools family consists out of 5 separate applications: 
   * The TrayNotifier
   * The NotifierGadget
   * The [NotifierGadgetXP NotifierGadgetXP]
   * The [NotifierCE NotifierCE]
   * The NotifierProxy
   * The [NotifierProxy Notifier Proxy Configurator]
- 
 
 = Details =
 
 ==TrayNotifier==
-The TrayNotifier runs on a Windows Workstation. It notifies the user of an alarm condition with a flashing red dot in the system tray.  It can automatically popup and play a sound for extra attention. 
+The !TrayNotifier runs on a Windows Workstation. It notifies the user of an alarm condition with a flashing red dot in the system tray.  It can automatically popup and play a sound for extra attention. 
 
 ==[NotifierGadget NotifierGadget]==
-The NotifierGadget is installed in the sidebar of your Vista or Win7 machine, providing you with a constant view of the current number of alarms, warnings and paused sensors.
+The !NotifierGadget is installed in the Vista or Win7 sidebar, providing you with a constant view of the current number of alarms, warnings and paused sensors.
 
 ==[NotifierGadgetXP NotifierGadgetXP]==
-The [NotifierGadgetXP NotifierGadgetXP] is installed on your WindowsXP machine, providing you with a constant view of the current number of alarms, warnings and paused sensors.
+he NotifierGadgetXP can be installed on a Windows XP system or Vista system not running the sidebar, providing you with a constant view of the current number of alarms, warnings and paused sensors.
  
 ==[NotifierCE NotifierCE]==
-The [NotifierCE NotifierCE] runs on a Windows Mobile device. It can collect sensor data on demand. 
+The NotifierCE runs on a Windows Mobile device. It can collect sensor data on demand. 
  
 ==[NotifierProxy Notifier Proxy]==
-Using the [NotifierProxy Notifier Proxy], the workstations in your network can connect to the Network Monitor server using the standard HTTP port 80, while the Network Monitor server is exposed to the internet through the Notifier Proxy only. The Notifier Proxy can be set up to only allow HTTPS connections from the NotifierCE. The Notifier Proxy can also be 
+Using the !NotifierProxy, the workstations in your network can connect to the Network Monitor server using the standard HTTP port 80, while the Network Monitor server is exposed to the internet through the Notifier Proxy only. The Notifier Proxy can be set up to only allow HTTPS connections from the NotifierCE. The Notifier Proxy can also be 
 set to only allow known WindowsCE devices to connect. This way you can use a full access account to safely connect to the Network Monitor server, pausing and resuming sensors, without exposing its web interface to the internet. 
 The Notifier Proxy can also send updates for the NotifierCE to the mobile devices. 
 The Notifier Proxy runs as a webservice on a computer on your network. This can be the same machine as where the Network Monitor runs on.  The Notifier Proxy runs on IIS witch has to be installed on the target machine. 
