--- a/wiki/UserFeedback.wiki
+++ b/wiki/UserFeedback.wiki
@@ -4,4 +4,5 @@
 http://gf-ptf.googlecode.com/files/PRTGToolsFamily_65x119.png
 
 ====Comments, Suggestions or Feature Requests?====
-====Please enter them below (you have to be signed in).====
+====Please enter them below (you have to be signed in)====
+====or send an email to [mailto:prtgtoolsfamily%40gmail%2Ecom PTF]====
