Edited wiki page through web user interface.

--- a/wiki/UserFeedback.wiki
+++ b/wiki/UserFeedback.wiki
@@ -4,5 +4,4 @@
 http://gf-ptf.googlecode.com/files/PRTGToolsFamily_65x119.png
 
 ====Comments, Suggestions or Feature Requests?====
-====Please enter them below (you have to be signed in)====
-====or send an email to [mailto:prtgtoolsfamily%40gmail%2Ecom?SUBJECT=PRTG%20Tools%20Family ptf]====
+====Please enter them below (you have to be signed in)or send an email to [mailto:prtgtoolsfamily%40gmail%2Ecom?SUBJECT=PRTG%20Tools%20Family ptf]====
