--- a/wiki/VersionHistory.wiki
+++ b/wiki/VersionHistory.wiki
@@ -15,6 +15,7 @@ http://gf-ptf.googlecode.com/files/PRTGToolsFamily_65x119.png
 ||!NotifierProxy||1.0.0.5||21/06/2009||[http://prtg7addons.googlecode.com/files/Krijco.NotifierProxy.zip here]||
 ||!ProxyConfigurator||1.0.0.3||22/04/2009||[http://prtg7addons.googlecode.com/files/Krijco.ProxyConfigurator.zip here]||
 ||Distribution Tool||1.0.1.5||13/07/2009||[http://prtg7addons.googlecode.com/files/Krijco.Distribution%20tool.zip here]||
+||Translation Tool||1.0.1.1||05/08/2009||[http://prtg7addons.googlecode.com/files/PTF.PTF%20Translate.zip here]||
 
 ==TrayNotifier==
 ====2.0.2.2 _29/07/2009_====
@@ -133,4 +134,10 @@ http://gf-ptf.googlecode.com/files/PRTGToolsFamily_65x119.png
  * Changed the sidegrip to look more like a real gadget.
  * Fixed an issue where the bottom of the server name could be chopped of.
 ====1.0.1 _11/05/2009_====
+ * First public version
+
+----
+
+==[Translate Translation Tool]==
+====1.0.1.1 _05/08/2009_====
  * First public version
