--- a/wiki/CustomSensors.wiki
+++ b/wiki/CustomSensors.wiki
@@ -8,11 +8,12 @@ http://gf-ptf.googlecode.com/files/PRTGToolsFamily_65x119.png
 
 ====Latest versions:====
 || *Sensor* || *Version* || *Date* || *Download* ||
+||[#PassHash PassHash Tool]||1.0.1.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.PassHash%20Tool.zip here]||
 ||[#CheckPRTGVersion CheckPRTGVersion]||1.0.1.1||29/06/2009||[http://prtg7addons.googlecode.com/files/PTF.CheckPRTGVersion.zip here]||
-||[#FTPFileCount FTPFileCount]||1.0.1.1||29/06/2009||[http://prtg7addons.googlecode.com/files/PTF.FTPFileCount.zip here]||
-||[#NetworkFileCount NetworkFileCount]||1.0.1.1||01/07/2009||[http://prtg7addons.googlecode.com/files/PTF.NetworkFileCount.zip here]||
-||[#LogFileReader LogFileReader]||1.0.1.1||06/07/2009||[http://prtg7addons.googlecode.com/files/PTF.LogfileReader.zip here]||
-||[#EmailCount EmailCount]||1.0.1.1||12/07/2009||[http://prtg7addons.googlecode.com/files/PTF.EmailCount.zip here]||
+||[#FTPFileCount FTPFileCount]||1.0.2.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.FTPFileCount.zip here]||
+||[#NetworkFileCount NetworkFileCount]||1.0.2.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.NetworkFileCount.zip here]||
+||[#LogFileReader LogFileReader]||1.0.2.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.LogfileReader.zip here]||
+||[#EmailCount EmailCount]||1.0.2.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.EmailCount.zip here]||
 
 == Overview ==
 http://gf-ptf.googlecode.com/files/CustomSensors.png
@@ -23,6 +24,18 @@ All Custom Sensors listed target the _.net framework 2.0_.
 Copy the .exe file to the "Program Files\PRTG Network Monitor\Custom Sensors\EXE" folder of your PRTG Network Monitor server. You can manually launch the .exe for an explanation of the parameters required.
 
 Comments, suggestions, feature requests? Leave a note [http://code.google.com/p/prtg7addons/wiki/UserFeedback here]
+
+----
+
+== !PassHash Tool ==
+=== Summary ===
+This tool can be used in combination with PTF sensors that require a users password to be entered in the sensors settings section. The !PassHash can be used instead off the given password. [http://code.google.com/p/gf-ptf/wiki/PassHash details]
+
+ back to [#Latest_versions: top]
+
+=== Version history === 
+====1.0.1.1 _06/08/2009_====
+ * First public version
 
 ----
 
@@ -49,12 +62,14 @@ This Custom Sensor returns the number of files available on a FTP server.
 
 Enter the credentials (username and password) and the url in the Parameters section of the Sensor Settings:
 {{{
--u=username -p=password ftp://10.0.0.10/upload
+-u=username -p=password|passhash ftp://10.0.0.10/upload
 }}}
 
  back to [#Latest_versions: top]
 
 === Version history ===
+====1.0.2.1 _06/08/2009_====
+ * Added support for the passhash (scrambled password to be generated with the PTF PassHash Tool)
 ====1.0.1.1 _29/06/2009_====
  * First public version
 
@@ -67,12 +82,14 @@ As your PRTG server runs under the local system account it can't access files on
 
 Enter the credentials (username and password), folder (and optional search filter and setting to also search the sub folders) in the Parameters section of the Sensor Settings:
 {{{
--u=username -p=password -f=\\myserver\myshare [-s=*.exe -sub]
+-u=username -p=password|passhash -f=\\myserver\myshare [-s=*.exe -sub]
 }}}
 
  back to [#Latest_versions: top]
 
 === Version history ===
+====1.0.2.1 _06/08/2009_====
+ * Added support for the passhash (scrambled password to be generated with the PTF PassHash Tool)
 ====1.0.1.1 _29/06/2009_====
  * First public version
 
@@ -84,12 +101,14 @@ This Custom Sensor returns whether a specified string occurs in a (log) file. Th
 
 Enter the credentials (username and password), filename and searchstring in the Parameters section of the Sensor Settings:
 {{{
--u=username -p=password -f="c:\file location\log.txt" -s="String to search"
+-u=username -p=password|passhash -f="c:\file location\log.txt" -s="String to search"
 }}}
 
  back to [#Latest_versions: top]
 
 === Version history ===
+====1.0.2.1 _06/08/2009_====
+ * Added support for the passhash (scrambled password to be generated with the PTF PassHash Tool)
 ====1.0.1.1 _06/07/2009_====
  * First public version
 
@@ -101,7 +120,7 @@ This Custom Sensor returns the total number of messages in a users inbox.
 
 Enter the credentials (username and password) and emailserver in the Parameters section of the Sensor Settings:
 {{{
--u=username -p=password -s=emailserver [-o=serverport -ssl]
+-u=username -p=password|passhash -s=emailserver [-o=serverport -ssl]
 
 example:
 -s=balu.krijco.loc -u=john -p=****
@@ -112,5 +131,7 @@ or
  back to [#Latest_versions: top]
 
 === Version history ===
+====1.0.2.1 _06/08/2009_====
+ * Added support for the passhash (scrambled password to be generated with the PTF PassHash Tool)
 ====1.0.1.1 _12/07/2009_====
  * First public version
