--- a/wiki/VersionHistory.wiki
+++ b/wiki/VersionHistory.wiki
@@ -8,7 +8,7 @@ http://gf-ptf.googlecode.com/files/PRTGToolsFamily_65x119.png
 
 *Latest versions:*
 || *Application* || *Version* || *Date* || *Download* ||
-||!TrayNotifier||2.0.2.2||29/07/2009||[http://prtg7addons.googlecode.com/files/Krijco.TrayNotifier.zip here]||
+||!TrayNotifier||3.0.1.2||19/08/2009||[http://prtg7addons.googlecode.com/files/Krijco.TrayNotifier.zip here]||
 ||!NotifierGadget||1.0.4||15/06/2009||[http://prtg7addons.googlecode.com/files/Krijco.NotifierGadget.zip here]||
 ||NotifierGadgetXP||1.0.2||26/05/2009||[http://prtg7addons.googlecode.com/files/Krijco.NotifierGadgetXP.zip here]||
 ||NotifierCE||2.0.1.1||21/06/2009||[http://prtg7addons.googlecode.com/files/Krijco.NotifierCE.zip here]||
@@ -18,6 +18,11 @@ http://gf-ptf.googlecode.com/files/PRTGToolsFamily_65x119.png
 ||Translation Tool||1.0.1.1||05/08/2009||[http://prtg7addons.googlecode.com/files/PTF.PTF%20Translate.zip here]||
 
 ==TrayNotifier==
+====3.0.1.2 _19/08/2009_====
+ * Changed: All settings are now concentrated in one screen.
+ * Changed: The !TreeView has been altered to show more instant information.
+ * New: Added proxy settings for contacting your PRTG server.
+ * The !TrayNotifier is now compatible with PRTG 7.2
 ====2.0.2.2 _29/07/2009_====
  * Bugfix: In the latest PRTG version, some DOWN sensors do not produce there downtime anymore. This could cause the TrayNotifier not to refresh, showing the refresh seconds in red.
 ====2.0.2.1 _10/07/2009_====
