--- a/wiki/VersionHistory.wiki
+++ b/wiki/VersionHistory.wiki
@@ -8,7 +8,7 @@ http://gf-ptf.googlecode.com/files/PRTGToolsFamily_65x119.png
 
 *Latest versions:*
 || *Application* || *Version* || *Date* || *Download* ||
-||!TrayNotifier||3.0.3.1||03/09/2009||[http://prtg7addons.googlecode.com/files/Krijco.TrayNotifier.zip here]||
+||!TrayNotifier||3.0.4.1||07/09/2009||[http://prtg7addons.googlecode.com/files/Krijco.TrayNotifier.zip here]||
 ||!NotifierGadget||1.0.4||15/06/2009||[http://prtg7addons.googlecode.com/files/Krijco.NotifierGadget.zip here]||
 ||NotifierGadgetXP||1.0.2||26/05/2009||[http://prtg7addons.googlecode.com/files/Krijco.NotifierGadgetXP.zip here]||
 ||NotifierCE||2.0.1.1||21/06/2009||[http://prtg7addons.googlecode.com/files/Krijco.NotifierCE.zip here]||
@@ -18,6 +18,11 @@ http://gf-ptf.googlecode.com/files/PRTGToolsFamily_65x119.png
 ||Translation Tool||1.0.1.1||05/08/2009||[http://prtg7addons.googlecode.com/files/PTF.PTF%20Translate.zip here]||
 
 ==TrayNotifier==
+====3.0.4.1 _07/09/2009_====
+ * Bugfix: The object rename event in the Sensor Tree could fire unexpected.
+ * Bugfix: Improved backwards compatibility with PRTG 7.1
+ * New: Set your own timespan for a graph in the Sensor Tree "select" tab.
+ * New: Added context menu to save graph to file or clipboard.
 ====3.0.3.1 _03/09/2009_====
  * Changed: Login to device pages without showing username and passhash.
  * Changed: A read-only account will now be presented with less options instead of returning an error message
