--- a/wiki/Translations.wiki
+++ b/wiki/Translations.wiki
@@ -2,15 +2,15 @@
 
 = Translations for PRTG Network Monitor =
 
-PRTG already comes with a set of translations created by Paessler (e.g. English, German). Additionally users can translate the software into other languages. Please note that these translations were not created by Paessler and they are not officially supported by Paessler.
+PRTG already comes with a set of translations created by Paessler (e.g. English, German, Spanish and French). Additionally users can translate the software into other languages using the TranslationTool. Please note that these translations were not created by Paessler and they are not officially supported by Paessler.
 
 Currently available:
 
- * Dutch (by Gerard Feijth)
+ * http://gf-ptf.googlecode.com/files/nl.png [http://code.google.com/p/prtg7addons/downloads/list?can=2&q=translation:%20dutch Dutch] (by Gerard Feijth)
 
 = Installation of Language Files=
 
-Please download the language file that fits your PRTG version from the downloads page:
-http://code.google.com/p/prtg7addons/downloads/list?can=2&q=translation
+Please download the language file that fits your PRTG version from the
+[http://code.google.com/p/prtg7addons/downloads/list?can=2&q=translation downloads page]
 
 Unzip the file and place it into the /language subfolder of your PRTG installation. Start the PRTG Server Administrator tool and select the desired language from the drop down.
