--- a/wiki/Translations.wiki
+++ b/wiki/Translations.wiki
@@ -2,7 +2,7 @@
 
 = Translations for PRTG Network Monitor =
 
-PRTG already comes with a set of translations created by Paessler (e.g. English, German, Spanish and French). Additionally users can translate the software into other languages using the TranslationTool. Please note that these translations were not created by Paessler and they are not officially supported by Paessler.
+PRTG already comes with a set of translations created by Paessler (e.g. English, German, Spanish and French). Additionally users can translate the software into other languages using the [Translate TranslationTool]. Please note that these translations were not created by Paessler and they are not officially supported by Paessler.
 
 Currently available:
 
