--- a/wiki/KrijcoWikiSidebar.wiki
+++ b/wiki/KrijcoWikiSidebar.wiki
@@ -14,6 +14,7 @@ http://gf-ptf.googlecode.com/files/PRTGToolsFamily_65x119.png
  * ====[NotifierProxy]====
  * ====[Distribution Distribution tool]====
  * ====[Translate Translation tool]====
+ * ====[Mapdesigner Map Designer]====
  * ====[CustomSensors Custom Sensors]====
 
 
