--- a/wiki/KrijcoWikiSidebar.wiki
+++ b/wiki/KrijcoWikiSidebar.wiki
@@ -24,7 +24,7 @@ http://gf-ptf.googlecode.com/files/Document-48x48.png [NotifierDocumentation Doc
 
 http://gf-ptf.googlecode.com/files/Open-48x48.png [VersionHistory]
 
-http://gf-ptf.googlecode.com/files/Download-48x48.png [http://code.google.com/p/prtg7addons/downloads/list?can=2&q=author-Gerard_Feijth&sort=summary&colspec=Filename+Summary+Size+DownloadCount Downloads]
+http://gf-ptf.googlecode.com/files/Download-48x48.png [http://code.google.com/p/prtg7addons/downloads/list?can=2&sort=summary&colspec=Filename+Summary+Size+DownloadCount Downloads]
 
 ====Stay informed about new releases, bug fixes, upcoming changes and more.====
 
