--- a/wiki/CustomSensors.wiki
+++ b/wiki/CustomSensors.wiki
@@ -14,6 +14,8 @@ http://gf-ptf.googlecode.com/files/PRTGToolsFamily_65x119.png
 ||[#NetworkFileCount NetworkFileCount]||1.0.2.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.NetworkFileCount.zip here]||
 ||[#LogFileReader LogFileReader]||1.0.2.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.LogfileReader.zip here]||
 ||[#EmailCount EmailCount]||1.0.2.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.EmailCount.zip here]||
+||[#INIFileValue INIFileValue]||1.0.1.1||16/11/2009||[http://prtg7addons.googlecode.com/files/PTF.INIFileValue.zip here]||
+||[#PingWarning PingWarning]||1.0.1.1||16/11/2009||[http://prtg7addons.googlecode.com/files/PTF.PingWarning.zip here]||
 
 == Overview ==
 http://gf-ptf.googlecode.com/files/CustomSensors.png
@@ -140,4 +142,38 @@ or
 ====1.0.2.1 _06/08/2009_====
  * Added support for the passhash (scrambled password to be generated with the PTF PassHash Tool)
 ====1.0.1.1 _12/07/2009_====
+ * First public version
+
+----
+
+== INIFileValue ==
+=== Summary ===
+This sensor returns the value from the field of a .ini file
+
+Enter the credentials (username and password), filename, section name and field name in the Parameters section of the Sensor Settings:
+{{{
+-u=username -p=password|passhash -f=C:\Windows\win.ini -s=Mail -d=MAPI
+}}}
+
+ back to [#Latest_versions: top]
+
+=== Version history ===
+====1.0.1.1 _16/11/2009_====
+ * First public version
+
+----
+
+== !PingWarning ==
+=== Summary ===
+This sensor pings a device and goes into a warning state if no reply is received.
+
+Enter the ip-address|hostname and optional parameters in the Parameters section of the Sensor Settings:
+{{{
+192.168.1.1 [-w=500] [-i=64] [-l=32]
+}}}
+
+ back to [#Latest_versions: top]
+
+=== Version history ===
+====1.0.1.1 _16/11/2009_====
  * First public version
