Edited wiki page through web user interface.

--- a/wiki/Translate.wiki
+++ b/wiki/Translate.wiki
@@ -12,4 +12,4 @@ For each translation a .lng file must be created. This file contains about 5000 
 
 http://gf-ptf.googlecode.com/files/PTFTranslate.png
 
-For more details, see the pdf that is included in the download.
+For more details, see the pdf that is included in the [VersionHistory download].
